--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
+
 html,
 body {
   padding: 0;
@@ -6,6 +8,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.brand {
+  font-family: Rock Salt;
+}
 a {
   color: inherit;
   text-decoration: none;
