--- a/nextapp/styles/globals.css
+++ b/nextapp/styles/globals.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Rock+Salt');
-
+@import url('https://fonts.googleapis.com/css2?family=Genos:wght@500&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color:rgb(215, 217, 218);
 }
 
 .brand {
-  font-family: Rock Salt;
+  font-family: Genos;
 }
 a {
   color: inherit;
